--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,11 @@
 }
 
 #root {
-  max-width: 1280px;
+  max-height: 1280px;
+  min-width: 720px;
+  max-width: 720px;
+  min-height: 1280px;
+  aspect-ratio: 16 / 9;
   margin: 0%;
   padding: 0%;
 }
