--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,21 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #CCCCCC;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+@font-face {
+  font-family: 'ndot-47';
+  src: url('/src/fonts/ndot-47.woff') format('woff');
+      /* url('/Fonts/NeueMachina-Regular.woff') format('woff'), */
+      /* url('/Fonts/NeueMachina-Ultrabold.woff') format('woff'); */
+  font-weight: normal;
+  font-style: normal;
+}
+body{
+  font-family: ndot-47;
 }
