--- a/src/modules/screen/pages/display.module.css
+++ b/src/modules/screen/pages/display.module.css
@@ -12,7 +12,11 @@
     color: #000;
     text-align: center;
 
-    & h3 {
+    & h4 {
+        line-height: 40px;
+    }
+
+    .title {
         line-height: 40px;
         margin: 20px 0px;
     }
