Update CSS styles and text content

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,12 @@
   margin: 0%;
   padding: 0%;
 }
-
+html{
+  /* transform: rotate(270deg); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 #root {
   max-height: 1280px;
   min-width: 720px;
