--- a/src/modules/screen/pages/display.module.css
+++ b/src/modules/screen/pages/display.module.css
@@ -139,6 +139,10 @@
             border-radius: 30px;
             color: #fff;
             position: relative;
+            transition: transform 0.8s;
+            /* transform-style: preserve-3d; */
+            transform: rotateY(0deg);
+            animation: flip 10s infinite;
 
             .details {
                 position: absolute;
@@ -168,4 +172,16 @@
         }
     }
 
+}
+
+@keyframes flip {
+    0% {
+        transform: rotateY(0deg);
+    }
+    50% {
+        transform: rotateY(180deg);
+    }
+    100% {
+        transform: rotateY(0deg);
+    }
 }
