--- a/src/modules/screen/pages/display.module.css
+++ b/src/modules/screen/pages/display.module.css
@@ -11,7 +11,11 @@
     aspect-ratio: 16 / 9;
     color: #000;
     text-align: center;
-
+    .error {
+        color: red;
+        font-size: 20px;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
     & h4 {
         line-height: 40px;
     }
