--- a/src/modules/screen/pages/display.module.css
+++ b/src/modules/screen/pages/display.module.css
@@ -178,7 +178,7 @@
 
 }
 
-@keyframes flip {
+/* @keyframes flip {
     0% {
         transform: rotateY(0deg);
     }
@@ -188,4 +188,4 @@
     100% {
         transform: rotateY(0deg);
     }
-}
+} */
