Add scaling transformation to index.css

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* transform: rotate(-90deg); */
+  transform: scale(.5);
 }
 
 @font-face {
