--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* transform: rotate(-90deg); */
-  transform: scale(.5);
+  transform: rotate(-90deg);
+  /* transform: scale(.5); */
 }
 
 @font-face {
