--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  transform: rotate(-90deg);
-  /* transform: scale(.5); */
+  transform: scale(.5);
 }
 
 @font-face {
