--- a/src/modules/screen/pages/display.module.css
+++ b/src/modules/screen/pages/display.module.css
@@ -24,7 +24,7 @@
 
     .title {
         font-size: 30px;
-        line-height: 80px;
+        line-height: 75px;
         margin: 20px 0px;
     }
 
@@ -57,11 +57,21 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            transition: opacity 1s ease-in-out;
+            padding: 20px;
+            box-sizing: border-box;
 
             & p {
-                position: absolute;
+                /* position: absolute; */
                 font-size: 40px;
                 color: white;
+            }
+
+            & h4 {
+                /* position: absolute; */
+                font-size: 24px;
+                line-height: 30px;
+                color: black;
             }
         }
 
